# 3D-Surface-Descriptor-Learning

./: README.md
3dDescriptorLearning/: keypoints_faust256.kpi
3dDescriptorLearning/cpp_geometry_images_generation/: CMakeLists.txt
3dDescriptorLearning/cpp_geometry_images_generation/include/: Generator.h  Heap.h
3dDescriptorLearning/matlab_tools/: check_face_vertex.m  compute_curvature.m  dijkstra_to_all.m  getoptions.m  perform_mesh_smoothing.m  shape_diameter.m
3dDescriptorLearning/python_tripletCNN/: train_mincv_perloss.py  train_softmax256.py
